--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,3 +1,20 @@
 .button {
-    background-color: black;
+    min-width: 100px;
+    padding: 0 16px;
+    line-height: 36px;
+    border: none;
+    border-radius: 18px;
+    cursor: pointer;
+    background: none;
+    background-color: var(--color-black-lighter);
+    color: #fff;
+    transition: background-color 0.6s;
+}
+
+.button:hover {
+    background-color: var(--color-gray-dark);
+}
+.button:disabled {
+    background-color:var(--color-gray-medium);
+    color:var(--color-gray-light)
 }
